--- a/index.html
+++ b/index.html
@@ -478,6 +478,49 @@
       </form>
     </section>
 
+    <section id="portfolio-details" class="portfolio-card">
+      <h2>Portfolio Details</h2>
+      <div class="details-table">
+        <div class="row">
+          <span
+            >Course
+            Name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</span
+          ><span>Algorithmic Problem Solving</span>
+        </div>
+        <div class="row">
+          <span
+            >Course
+            Code&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</span
+          ><span>24ECSE309</span>
+        </div>
+        <div class="row">
+          <span
+            >Name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</span
+          ><span>Apeksha M. Bannigidad</span>
+        </div>
+        <div class="row">
+          <span
+            >SRN&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</span
+          ><span>01FE22BCS252</span>
+        </div>
+        <div class="row">
+          <span>Course Instructor&nbsp;&nbsp;&nbsp;&nbsp;:</span
+          ><span>Prakash Hegade</span>
+        </div>
+        <div class="row">
+          <span
+            >University&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</span
+          ><span>KLE Technological University</span>
+        </div>
+        <div class="row">
+          <span
+            >Portfolio
+            Topic&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</span
+          ><span>Microsoft</span>
+        </div>
+      </div>
+    </section>
+
     <footer>
       <p>Made with ❤️ by Apeksha | © 2025</p>
     </footer>
