--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
               <li>AI and Machine Learning</li>
               <li>Data Structures & Algorithms (DSA)</li>
               <li>Cloud Computing</li>
+               <li>Azure</li>
               <li>Github</li>
               <li>Git</li>
             </ul>
