--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="underline"></div>
         <!-- Keep this for the underline under the heading -->
 
-        <div class="skills-container">
+<!--         <div class="skills-container">
           <div class="skills-card">
             <h3>Technical Skills</h3>
             <ul>
@@ -138,7 +138,25 @@
               <li>Github</li>
               <li>Git</li>
             </ul>
-          </div>
+          </div> -->
+        <div class="skills-container">
+  <div class="skills-card">
+    <h3>Technical Skills</h3>
+    <ul>
+      <li><img src="https://lineicons.com/icons/c.svg" alt="C icon" width="20" height="20"> C, C++</li>
+      <li><img src="https://lineicons.com/icons/python.svg" alt="Python icon" width="20" height="20"> Python</li>
+      <li><img src="https://lineicons.com/icons/html.svg" alt="HTML icon" width="20" height="20"> HTML / CSS</li>
+      <li><img src="https://lineicons.com/icons/javascript.svg" alt="JavaScript icon" width="20" height="20"> JavaScript, React, Node.js</li>
+      <li><img src="https://lineicons.com/icons/ai.svg" alt="AI icon" width="20" height="20"> AI and Machine Learning</li>
+      <li><img src="https://lineicons.com/icons/dsa.svg" alt="DSA icon" width="20" height="20"> Data Structures & Algorithms (DSA)</li>
+      <li><img src="https://lineicons.com/icons/cloud.svg" alt="Cloud Computing icon" width="20" height="20"> Cloud Computing</li>
+      <li><img src="https://lineicons.com/icons/azure.svg" alt="Azure icon" width="20" height="20"> Azure</li>
+      <li><img src="https://lineicons.com/icons/github.svg" alt="GitHub icon" width="20" height="20"> GitHub</li>
+      <li><img src="https://lineicons.com/icons/git.svg" alt="Git icon" width="20" height="20"> Git</li>
+    </ul>
+  </div>
+</div>
+
 
           <div class="skills-card">
             <h3>Soft Skills</h3>
