--- a/index.html
+++ b/index.html
@@ -117,43 +117,59 @@
       </div>
     </section>
 
-    <section id="skills" class="skills-section">
+    <section class="skills-section">
       <div class="skills-wrapper">
         <h2 class="skills-heading">Skills</h2>
-        <div class="underline"></div>
-        <!-- Keep this for the underline under the heading -->
 
-        <div class="skills-container">
-          <div class="skills-card">
-            <h3>Technical Skills</h3>
-            <ul>
-              <li>C, C++</li>
-              <li>Python</li>
-              <li>HTML / CSS</li>
-              <li>JavaScript, React, Node.js</li>
-              <li>AI and Machine Learning</li>
-              <li>Data Structures & Algorithms (DSA)</li>
-              <li>Cloud Computing</li>
-               <li>Azure</li>
-              <li>Github</li>
-              <li>Git</li>
-            </ul>
+        <div class="skills-big-card">
+          <h3 class="big-card-title">Technical Skills</h3>
+          <div class="tech-skills-row">
+            <!-- Languages & Databases -->
+            <div class="skills-card">
+              <h4>Languages & Databases</h4>
+              <ul>
+                <li><img src="images/python.png" alt="" />Python</li>
+                <li><img src="images/js.png" alt="" />JavaScript</li>
+                <li><img src="images/c_cpp.png" alt="" />C, C++</li>
+                <li><img src="images/html.png" alt="" />HTML</li>
+                <li><img src="images/css.png" alt="" />CSS</li>
+                <li><img src="images/mysql.png" alt="" />MySQL</li>
+                <li><img src="images/mongodb.png" alt="" />MongoDB</li>
+              </ul>
+            </div>
+
+            <!-- Frameworks -->
+            <div class="skills-card">
+              <h4>Frameworks</h4>
+              <ul>
+                <li><img src="images/nodejs.png" alt="" />Node.js</li>
+                <li><img src="images/react.png" alt="" />React</li>
+              </ul>
+            </div>
+
+            <!-- Other Tools -->
+            <div class="skills-card">
+              <h4>Other Tools</h4>
+              <ul>
+                <li><img src="images/github.png" alt="" />GitHub</li>
+                <li><img src="images/gitbash.png" alt="" />Git</li>
+                <li><img src="images/docker.png" alt="" />Docker</li>
+                <li><img src="images/Azure.png" alt="" />Azure</li>
+              </ul>
+            </div>
           </div>
+        </div>
 
-
-
-          <div class="skills-card">
-            <h3>Soft Skills</h3>
-            <ul>
-              <li>Communication</li>
-              <li>Leadership</li>
-              <li>Teamwork</li>
-              <li>Problem Solving</li>
-              <li>Critical Thinking</li>
-              <li>Curiosity & Continuous Learning</li>
-              <li>Adaptability</li>
-            </ul>
-          </div>
+        <div class="soft-skills-card">
+          <h3>Soft Skills</h3>
+          <ul>
+            <li>Communication</li>
+            <li>Leadership</li>
+            <li>Teamwork</li>
+            <li>Problem Solving</li>
+            <li>Critical Thinking</li>
+            <li>Adaptability & Continuous Learning</li>
+          </ul>
         </div>
       </div>
     </section>
