Add resume, images, algorithm GIFs, and updated layout

--- a/index.html
+++ b/index.html
@@ -1843,7 +1843,7 @@
     <div class="github-link">
       <img src="images/github.png" alt="GitHub" class="github-link__icon" />
       <a
-        href="https://github.com/Apeksha200/Apeksha.github.io/blob/main/codes/google_clusters_scc/kosaraju.cpp"
+        href="https://github.com/Apeksha200/Apeksha.github.io/blob/main/codes/user_cluster_detection/tarjan_kosaraju.cpp"
         class="github-link__text"
         target="_blank"
         rel="noopener noreferrer"
@@ -1938,7 +1938,7 @@
     <div class="github-link">
       <img src="images/github.png" alt="GitHub" class="github-link__icon" />
       <a
-        href="https://github.com/Apeksha200/Algorithms/blob/main/dijkstra.cpp"
+        href="https://github.com/Apeksha200/Apeksha.github.io/blob/main/codes/google_maps/dijkstra.cpp"
         class="github-link__text"
         target="_blank"
         rel="noopener noreferrer"
@@ -1949,7 +1949,7 @@
     <div class="github-link">
       <img src="images/github.png" alt="GitHub" class="github-link__icon" />
       <a
-        href="https://github.com/Apeksha200/Algorithms/blob/main/bellman_ford.cpp"
+        href="https://github.com/Apeksha200/Apeksha.github.io/blob/main/codes/google_maps/bellman_ford.cpp"
         class="github-link__text"
         target="_blank"
         rel="noopener noreferrer"
@@ -1960,7 +1960,7 @@
     <div class="github-link">
       <img src="images/github.png" alt="GitHub" class="github-link__icon" />
       <a
-        href="https://github.com/Apeksha200/Algorithms/blob/main/floyd_warshall.cpp"
+        href="https://github.com/Apeksha200/Apeksha.github.io/blob/main/codes/google_maps/floyd_warshall.cpp"
         class="github-link__text"
         target="_blank"
         rel="noopener noreferrer"
@@ -2047,7 +2047,7 @@
     <div class="github-link">
       <img src="images/github.png" alt="GitHub" class="github-link__icon" />
       <a
-        href="https://github.com/Apeksha200/Algorithms/blob/main/dijkstra.cpp"
+        href="https://github.com/Apeksha200/Apeksha.github.io/blob/main/codes/resource_Allocation/assignment_problem.cpp"
         class="github-link__text"
         target="_blank"
         rel="noopener noreferrer"
@@ -2151,7 +2151,7 @@ This combo ensures tabs are updated, found, and removed  all in constant time ,w
     <div class="github-link">
       <img src="images/github.png" alt="GitHub" class="github-link__icon" />
       <a
-        href="https://github.com/Apeksha200/Apeksha.github.io/blob/main/codes/tab_management/lru_cache.cpp"
+        href="https://github.com/Apeksha200/Apeksha.github.io/blob/main/codes/tab_management/doubly_linkedList_plus_hashtables"
         class="github-link__text"
         target="_blank"
         rel="noopener noreferrer"
@@ -2240,7 +2240,7 @@ This combo ensures tabs are updated, found, and removed  all in constant time ,w
     <div class="github-link">
       <img src="images/github.png" alt="GitHub" class="github-link__icon" />
       <a
-        href="https://github.com/Apeksha200/Apeksha.github.io/blob/main/codes/google_drive/segment_tree.cpp"
+        href="https://github.com/Apeksha200/Apeksha.github.io/blob/main/codes/google_drive_metadata/segmentTree.cpp"
         class="github-link__text"
         target="_blank"
         rel="noopener noreferrer"
@@ -2367,7 +2367,7 @@ This combo ensures tabs are updated, found, and removed  all in constant time ,w
   <div class="github-link">
     <img src="images/github.png" alt="GitHub" class="github-link__icon" />
     <a
-      href="https://github.com/Apeksha200/Apeksha.github.io/blob/main/codes/google_docs_plagiarism/rabin_karp.cpp"
+      href="https://github.com/Apeksha200/Apeksha.github.io/blob/main/codes/google_doc_plagarism/robinKarp.cpp"
       class="github-link__text"
       target="_blank"
       rel="noopener noreferrer"
@@ -2378,7 +2378,7 @@ This combo ensures tabs are updated, found, and removed  all in constant time ,w
   <div class="github-link">
     <img src="images/github.png" alt="GitHub" class="github-link__icon" />
     <a
-      href="https://github.com/Apeksha200/Apeksha.github.io/blob/main/codes/google_docs_plagiarism/kmp.cpp"
+      href="https://github.com/Apeksha200/Apeksha.github.io/blob/main/codes/google_doc_plagarism/KMP.cpp"
       class="github-link__text"
       target="_blank"
       rel="noopener noreferrer"
@@ -2509,7 +2509,7 @@ This combo ensures tabs are updated, found, and removed  all in constant time ,w
     <div class="github-link">
       <img src="images/github.png" alt="GitHub" class="github-link__icon" />
       <a
-        href="https://github.com/Apeksha200/Apeksha.github.io/blob/main/codes/google_photos/kd_tree.cpp"
+        href="https://github.com/Apeksha200/Apeksha.github.io/blob/main/codes/googlePhotos/KDTress.cpp"
         class="github-link__text"
         target="_blank"
         rel="noopener noreferrer"
@@ -2612,7 +2612,7 @@ This combo ensures tabs are updated, found, and removed  all in constant time ,w
     <div class="github-link">
       <img src="images/github.png" alt="GitHub" class="github-link__icon" />
       <a
-        href="https://github.com/Apeksha200/Apeksha.github.io/blob/main/codes/google_sheets/fenwick_tree.cpp"
+        href="https://github.com/Apeksha200/Apeksha.github.io/blob/main/codes/googleSheets/fenwickTree.cpp"
         class="github-link__text"
         target="_blank"
         rel="noopener noreferrer"
@@ -2697,6 +2697,22 @@ This combo ensures tabs are updated, found, and removed  all in constant time ,w
       Red-Black Trees ensure that the tree remains balanced after every insertion or deletion, providing consistent and efficient operation times for dynamic data structures. This is essential for Google News to quickly update and search millions of articles while maintaining personalized feeds.
     </p>
   </div>
+
+  <h3 class="business-case__subheading">Code Link</h3>
+<div class="business-case__content github-links">
+  <div class="github-link">
+    <img src="images/github.png" alt="GitHub" class="github-link__icon" />
+    <a
+      href="https://github.com/Apeksha200/Apeksha.github.io/blob/main/codes/googleNews/redBlacktrees.cpp"
+      class="github-link__text"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      View Code – Red-Black Tree for Google News
+    </a>
+  </div>
+</div>
+
 
 </section>
 
