Add resume, images, algorithm GIFs, and updated layout

--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
         <tr><td><a href="#business-case-8">Web Crawling & Rank</a></td><td>DFS, BFS, PageRank</td><td>O(k*(V+E))</td><td>O(V+E)</td></tr>
         <tr><td><a href="#business-case-9">Classroom Matching</a></td><td>Bipartite Matching</td><td>O(V * E)</td><td>O(V + E)</td></tr>
         <tr><td><a href="#business-case-10">User Communities</a></td><td>Kosaraju, Tarjan</td><td>O(V + E)</td><td>O(V^2)</td></tr>
-        <tr><td><a href="#business-case-11">Route Planning</a></td><td>Dijkstra, Bellman-Ford, FW</td><td>O((V+E) log V), O(VE), O(V^3)</td><td>O(V), O(V), O(V^2)</td></tr>
+        <tr><td><a href="#business-case-11">Route Planning</a></td><td>Dijkstra, Bellman-Ford, Floyd Warshall</td><td>O((V+E) log V), O(VE), O(V^3)</td><td>O(V), O(V), O(V^2)</td></tr>
         <tr><td><a href="#business-case-12">Resource Allocation</a></td><td>Assignment Problem</td><td>O(2N * N)</td><td>O(N^2)</td></tr>
         <tr><td><a href="#business-case-13">Tab Management</a></td><td>LRU Cache</td><td>O(1)</td><td>O(N)</td></tr>
         <tr><td><a href="#business-case-14">File Search</a></td><td>Segment Tree</td><td>O(log N)</td><td>O(N)</td></tr>
