Add resume, images, algorithm GIFs, and updated layout

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>Apeksha Bannigidad</h1>
     <ul>
       <li><a href="#about">About</a></li>
-      <li><a href="#skills">Skills</a></li>
+      <li><a href="#skills-main">Skills</a></li>
       <li><a href="#education">Education</a></li>
       <li><a href="#academic-projects">Projects</a></li>
       <li><a href="#business-case-summary">Business Cases</a></li>
@@ -218,7 +218,7 @@
         <h2 class="skills-heading">Skills</h2>
         <div class="underline"></div>
 
-        <div class="skills-big-card">
+        <div class="skills-big-card" id="skills-main">
           <h3 class="big-card-title">Technical Skills</h3>
           <div class="tech-skills-row">
             <!-- Languages & Databases -->
