Add resume, images, algorithm GIFs, and updated layout

--- a/index.html
+++ b/index.html
@@ -2716,6 +2716,17 @@ This combo ensures tabs are updated, found, and removed  all in constant time ,w
 
 </section>
 
+<section class="learnings-section" id="learnings">
+  <h2 class="section-heading"> Learnings and Key Takeaways</h2>
+  <div class="learnings-content">
+    <p>
+      This portfolio highlights how the right data structures and algorithms can effectively address business-specific challenges. Each case demonstrates a unique real-world problem where strategic algorithmic choices rooted in APS and DSA coursework—translate into scalable, efficient, and practical solutions.
+    </p>
+    <p>
+      &nbsp;&nbsp;By connecting theory to real applications, it emphasizes the power of algorithmic thinking in driving innovation. The insights gained reinforce how technical knowledge directly enhances product efficiency, service quality, and decision-making across domains.
+    </p>
+  </div>
+</section>
 
 
 
